--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^2.2.9",
     "@headlessui/tailwindcss": "^0.2.2",
     "@heroicons/react": "^2.2.0",
+    "embla-carousel-react": "^8.6.0",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3"
